signoz-envoy-proxy/k8s/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: observability
data:
  envoy.yaml: |
    static_resources:
      clusters:
        - name: backend_service
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: backend_service
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: httpbin
                          port_value: 80

        - name: opentelemetry_collector
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: opentelemetry_collector
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: otel-collector.observability.svc.cluster.local
                          port_value: 4317

      listeners:
        - name: listener_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/"
                              route:
                                cluster: backend_service
                    http_filters:
                      - name: envoy.filters.http.router

    stats_sinks:
      - name: envoy.stat_sinks.open_telemetry
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.stat_sinks.open_telemetry.v3.SinkConfig
          grpc_service:
            envoy_grpc:
              cluster_name: opentelemetry_collector
          emit_tags_as_attributes: true
          report_histograms_as_deltas: true

    stats_config:
      stats_tags:
        - tag_name: service.name
          fixed_value: envoy-proxy-k8s
        - tag_name: namespace
          fixed_value: observability
        - tag_name: deployment_environment
          fixed_value: lab
        - tag_name: cluster
          fixed_value: demo-cluster

    admin:
      access_log_path: /dev/null
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
